--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,9 @@ tauri-build = { version = "1.5", features = [] }
 tauri = { version = "1.5", features = [ "process-exit", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+midir = "0.9.1"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
