--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,8 @@ tauri = { version = "1.5", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 midir = "0.9.1"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
