--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.22.3",
+        "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1",
         "vexflow": "^4.2.3"
     },
     "devDependencies": {
